app/assets/stylesheets/tasks.css.less
// Place all the styles related to the Tasks controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

//$error_color: lighten(red, 20%);

.label {
  display: inline-block;
  font-weight: bold;
  a { color: #aaff00; }
}
.value {
  display: inline-block;
}

.article {
  position: relative;
}

#task{
  display: inline-block;
}

#info {
  margin-left: 30px;
  display: inline-block;
  position: absolute;
  border-left: 1px solid black;
  .task_description, .parameter_description, .errors {
    margin-left: 10px;
    min-height: 100px;
  }
}

em {
  font-size: 1.5em;
}

.advanced_options {
  display: none;
}

.expand_button {
  display: inline-block;
}

.result_data {
  margin-top: 20px;
}

.data_model_specifiers {
  .effective_count, .pseudocount {
    display: inline-block;
  }
}
.data_model_examples {
  display: none;
}

.background_model {
  .mode, .gc_content, .frequencies {
    display: inline-block;
  }
  .mode {
    select { margin-right: 10px; }
  }
  .frequencies {
    label { display: inline-block; margin-right: 5px; }
  }
  input {
    display: inline;
    width: 35px;
  }
}

.matrix {
  label {
    display: block;
  }
  textarea {
    height: 270px;
    width: 350px;
    white-space: nowrap;
  }
  textarea, pre {
    font-family: monospace;
    word-spacing: 1em; // columns are separated with very a long space
  }
}

.sequence_list {
  textarea {
    font-family: monospace;
    //word-spacing: 1em;
    font-size: 12px;
  }
}

.field_with_errors {
  background-color: lighten(red, 20%); //$error_color;
  .error {
    display: block;
  }
  input, textarea {
    background-color: lighten(red, 40%);
  }
}

